# poetry-dockerfile-githubactions

./: .dockerignore  Dockerfile  README.md  docker-compose.ci.yml  docker-compose.ci2.yml  docker-compose.yml  entrypoint  pyproject.toml  start
.github/workflows/: build.yml  build_cache.yml  build_push_action.yml
scripts/: start
tests/: boolean_test.py
web/: main.py
workflows/: build.yml
