[tool.poetry]
name = "poetry-test-app"
version = "0.1.0"
description = "The Great poetry-test-app"
authors = ["sparrovv@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
